src/test/deca/syntax/valid/added/juste_SEMI_with_BRACE.deca
// Description:
//    Programme minimaliste avec juste ;.
//
// Resultats:
//    ok
//
// Historique:
//    cree le 21/12/2024

{
;
}
