src/test/deca/syntax/invalid/added/string_imcomplet.deca
// Description:
//    Programme minimaliste utilisant println sans la parenthese ferme.
//
// Resultats:
//    Ligne 13 : Erreur de syntaxe.
//    le lexer doit relever une erreur
//
// Historique:
//    cree le 14/01/2024

{
    String ok = "Je suis une bonne chaîne de caractère";
    String ko = "Je suis une mauvaise chaîne de caractère ;
}
